--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="uno">
-        <h2 class="Texto">Cine-Sistemas</h2>
+        <h1 class="Texto">Cine-Sistemas</h1>
         <div class="dos">
             <div class="botones">
                 <input class="input tamano2" type="text">
@@ -31,9 +31,46 @@
         </nav>
         <div class="tres">
 
+            <H2 class="text-center editar-h2">Complejos</H2>
+
+            <div class="flex fuck">
+                <figure class="move">
+                    <a href="#">
+                        <img class="img1" src="./assets/images/130-1f4tchs3jqsp-desktop.png" alt="Complejo">
+                    </a>
+                </figure>
+                <figure >
+                    <a href="#">
+                        <img class="tamanoo" src="./assets/images/MAPA-CINE.png" alt="crokies">
+                    </a>
+                </figure>
+            </div>
+
+        <p class="direcciones">Direccion: Santa Rosa de Copan</p>
+        <p class="direcciones-dos">Sala Digital con 2D y 3D</p>
+
         </div>
-        <footer class="footer-conf">
+
         
+
+        <footer class="footer-conf">
+            <div class="g">
+                <div class="box">
+                    <figure>
+                        <a href="#">
+                            <img src="./assets/images/Facebook_f_logo_(2019).svg.png" alt="Logo de Facebook">
+                        </a>
+                    </figure>
+
+                    </div>
+                <div class="box paddding-bird">
+                    <figure>
+                        <a href="#">
+                            <img src="./assets/images/Twitter-logo.svg.png" alt="">
+                        </a>
+                    </figure>
+                </div>
+            </div>
         </footer>
     </div>
 
